<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="network_error">Please make sure your phone is connected with network.</string>
    <string name="dialog_gls_msg">This application would like to use your current location. Please enable a My
        Location source in system settings.</string>
    <string name="activity_not_found">Application isn\'t installed.</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <!-- Weather setting strings -->
    <string name="weather_settings">Weather settings</string>
    <string name="auto_update_common">Common settings</string>
    <string name="auto_location_title">Use my location</string>
    <string name="auto_location_summary">Automatically determine location</string>
    <string name="set_location_title">Set location</string>
    <string name="set_location_msg">Enter a city name: </string>
    <string name="city_name_error">City name can not be null.</string>
    <string name="dialog_choose_city">Choose city</string>
    <string name="weather_update_success">Location and weather updated successfully.</string>
    <string name="update_now_title">Update now</string>
    <string name="update_now_summary">Make sure network is connected.</string>
    <string name="switch_units_title">Switch temperature units</string>
    <string name="switch_units_summary_celsius">Celsius</string>
    <string name="switch_units_summary_fahrenheit">Fahrenheit</string>
    
    <string name="auto_update_setting">Auto-update settings</string>
    <string name="auto_update_title">Update automatically</string>
    <string name="auto_update_summary">Automatically get weather information through the network</string>
    <string name="start_time_title">Start time</string>
    <string name="end_time_title">End time</string>
    <string name="interval_time_title">Interval time</string>
    <string name="interval_time_summary">3 hours</string>
    <string name="get_latest_weather_failed">Failed to get the latest weather information.</string>
    <string name="wait_dialog_title">Please wait\u2026</string>
    <string name="wait_dialog_msg_weather">Searching\u2026</string>
    <string name="req_error">Failed to get weather information.</string>
    <string name="locate_error">Failed to get current location.</string>
    <string name="gps_error">Please open GPS.</string>
    <string name="wind_n">N</string>
    <string name="wind_ne">NE</string>
    <string name="wind_e">E</string>
    <string name="wind_se">SE</string>
    <string name="wind_s">S</string>
    <string name="wind_sw">SW</string>
    <string name="wind_w">W</string>
    <string name="wind_nw">NW</string>
    <string name="wind_var">VAR</string>
    <string name="wind_condition_1"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">%1$s</xliff:g></string>
    <string name="wind_condition_2"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">%1$s</xliff:g></string>
    <string name="wind_condition_3"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">%1$s</xliff:g></string>
    <string name="wind_condition_4"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">%1$s</xliff:g></string>
    <string name="wind_condition_5"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">%1$s</xliff:g></string>
    <string name="wind_condition_6"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">%1$s</xliff:g></string>
    <string name="wind_condition_7"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">%1$s</xliff:g></string>
    <string name="wind_condition_8"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">%1$s</xliff:g></string>
    <string name="wind_condition_9"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">%1$s</xliff:g></string>
    <string name="wind_condition_10"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">%1$s</xliff:g></string>
    <string name="wind_condition_11"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">%1$s</xliff:g></string>
    <string name="wind_condition_hurricane"><xliff:g id="speed" example="4.86">%2$s</xliff:g>km/h <xliff:g id="direction" example="NE">Hurricane</xliff:g></string>

    <!-- don't need translate below strings -->
    <string name="start_time_summary" translatable="false">07:00</string>
    <string name="end_time_summary" translatable="false">21:00</string>
    <string name="send_weather_log_title">Send weather log</string>
    <string name="send_weather_log_des">Send log to the developer if weather is wrong</string>
    <string name="weather_log_email_title">My weather is wrong</string>
    <string name="weather_log_email_city">My city </string>
    <string name="weather_log_email_description">Description</string>

</resources>